[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gwf-graph"
version = "0.1.1"
description = "Create a visual representation of the dependency graph in your gwf workflow"
authors = [
    { name = "Per Høgfeldt" },
    { name = "Jakob Jersild Nielsen", email = "jjn@inguz.dev" },
]
maintainers = [{ name = "Jakob Jersild Nielsen", email = "jjn@inguz.dev" }]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "graphviz",
    "gwf>=2.0.4",
    "gwf_utilization",
    "pydot",
    "regex",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.entry-points."gwf.plugins"]
graph = "gwf_graph.main:graph"

[project.urls]
Repository = "https://github.com/Hogfeldt/gwf-graph"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]
